[workspace]
members = ["crates/*", "cmds/*"]
resolver = "2"
package.version = "0.1.0"
package.edition = "2021"
package.rust-version = "1.82.0"

[workspace.dependencies]
better-command = { path = "./crates/better-command" }
fleet-shared = { path = "./crates/fleet-shared" }
nix-eval = { path = "./crates/nix-eval" }
nixlike = { path = "./crates/nixlike" }

age = { version = "0.11", features = ["ssh"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"
nix = { version = "0.29.0", features = ["fs", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0.3"
tokio = { version = "1.36.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
