[package]
name = "fleet"
description = "NixOS configuration management"
version = "0.2.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2021"

[dependencies]
nixlike.workspace = true
better-command.workspace = true
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
age = { workspace = true, features = ["armor"] }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time = { version = "0.3", features = ["serde"] }
hostname = "0.4.0"
age-core = "0.11"
peg = "0.8"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"
futures = "0.3"
itertools = "0.13"
shlex = "1.3"
tabled = { version = "0.16" }
owo-colors = { version = "4.0", features = [
	"supports-color",
	"supports-colors",
] }
abort-on-drop = "0.2"
regex = "1.10"
openssh = "0.11"
crossterm = { version = "0.28.0", features = ["use-dev-tty"] }
fleet-shared.workspace = true

tracing-indicatif = { version = "0.3", optional = true }
human-repr = { version = "1.1", optional = true }
indicatif = { version = "0.17", optional = true }
nix-eval.workspace = true
nom = "7.1.3"
fleet-base = { version = "0.1.0", path = "../../crates/fleet-base" }

[features]
# Not quite stable
indicatif = [
	"dep:tracing-indicatif",
	"dep:indicatif",
	"dep:human-repr",
	"better-command/indicatif",
]
