[package]
name = "fleet-generator-helper"
edition = "2021"
version.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
base64 = "0.22.1"
clap.workspace = true
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
fleet-shared.workspace = true
hex = "0.4.3"
rand = "0.8.5"
x25519-dalek = "2.0.1"
