[package]
name = "fleet-install-secrets"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"


[dependencies]
age = { version = "0.10.0", features = ["ssh"] }
anyhow = "1.0.79"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
nix = {version = "0.27.1", features = ["user", "fs"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
clap = { version = ">=4.4, <4.5", features = [
	"derive",
	"env",
	"wrap_help",
	"unicode",
] }
tempfile = "3.10.0"
fleet-shared.workspace = true
