[package]
name = "fleet-install-secrets"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"


[dependencies]
clap.workspace = true
fleet-shared.workspace = true
age.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
nix.workspace = true
