[package]
name = "better-command"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

tracing-indicatif = { version = "0.3", optional = true }

[features]
indicatif = ["tracing-indicatif"]
