[package]
name = "fleet-base"
edition = "2021"
version.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
better-command.workspace = true
chrono = "0.4.38"
clap = { workspace = true, features = ["derive"] }
fleet-shared.workspace = true
futures = "0.3.30"
hostname = "0.4.0"
itertools = "0.13.0"
nix-eval.workspace = true
nixlike.workspace = true
nom = "7.1.3"
openssh = "0.11.0"
rand = "0.8.5"
serde.workspace = true
serde_json = "1.0.127"
tempfile.workspace = true
tokio.workspace = true
tokio-util = "0.7.11"
tracing.workspace = true
