[package]
name = "nix-eval"
version.workspace = true
build = "build.rs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
better-command.workspace = true
futures = "0.3.30"
itertools = "0.13.0"
nixlike.workspace = true
r2d2 = "0.8.10"
regex = "1.10.6"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util"] }
tokio-util.workspace = true
tracing.workspace = true
unindent = "0.2.3"

# [build-dependencies]
# bindgen = "0.69.4"
# pkg-config = "0.3.30"
