[package]
name = "nixlike"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

alejandra = { git = "https://github.com/kamadorueda/alejandra" }
linked-hash-map = "0.5.6"
peg = "0.8.2"
ron = "0.8.1"
serde = "1.0.196"
serde-transcode = "1.1.1"
serde_json = "1.0.113"
